--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import '@/styles/global.css';
+import { ClientRouter } from 'astro:transitions';
 
 export interface Props {
   title: string;
@@ -15,6 +16,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <link rel="manifest" href="/manifest.json">
     <title>{title}</title>
+    <ClientRouter />
     <script is:inline>
       const detectSystemTheme = () =>
         window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light";
