Removed Room title - stable

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@ import Renderer from '@/components/Renderer.astro';
 
     <!-- Front Layer: Non-persistent UI (Audio Player, Titles) -->
     <div id="layer-front" class="layer">
-      <h1 id="page-title" class="floating-title" transition:name="room-title">Room 1</h1> <!-- test -->
+      <!-- <h1 id="page-title" class="floating-title" transition:name="room-title">Room 1</h1> --> <!-- test -->
       
     </div>
   </main>
